@@ -5311,10 +5311,6 @@ Dialog for Creating Matching Circuit</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <source>Change Property Values..</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
         <source>Calculates DC bias and shows it</source>
         <translation type="unfinished"></translation>
     </message>
